--- a/blog/Templates/blog/base.html
+++ b/blog/Templates/blog/base.html
@@ -64,7 +64,7 @@
                           <p class='text-muted'>You can put any information here you'd like.
                             <ul class="list-group">
                               <li> <a class="list-group-item list-group-item-light" href="{% url 'latest-post' %}">Latest Posts</a> </li>
-                              <li class="list-group-item list-group-item-light">Announcements</li>
+                              <li> <a class="list-group-item list-group-item-light" href="{% url 'announcements-post' %}">Announcements</a> </li>
                               <li class="list-group-item list-group-item-light">Calendars</li>
                               <li class="list-group-item list-group-item-light">etc</li>
                             </ul>
