--- a/blog/Templates/blog/latest_post.html
+++ b/blog/Templates/blog/latest_post.html
@@ -6,5 +6,6 @@
        <li>be bulletted</li>
        <li>help me practice html/css</li>
        <li>actually the #maincss file is pretty confusing. I'll take a good look at it</li>
+       <li>why is my procfile not being updated when I save????</li>
    </ol>  
 {% endblock content %}
